[gd_scene load_steps=2 format=2]

[ext_resource path="res://instance/ReminderInstance.gd" type="Script" id=1]

[node name="ReminderInstance" type="HBoxContainer"]
margin_right = 300.0
margin_bottom = 32.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="Delete" type="Button" parent="."]
margin_right = 19.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "x"

[node name="ReminderCheck" type="CheckBox" parent="."]
margin_left = 23.0
margin_right = 300.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "placeholder text"

[connection signal="pressed" from="Delete" to="." method="_on_Delete_pressed"]
[connection signal="toggled" from="ReminderCheck" to="." method="_on_ReminderCheck_toggled"]
